reactor optimized